# predictedwtf

./: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/create/: page.tsx
app/docs/: page.tsx
app/earn/: page.tsx
app/markets/: page.tsx
app/portfolio/: page.tsx
app/profile/: page.tsx
app/resolved/: page.tsx
app/settings/: page.tsx
components/create/: create-market-flow.tsx
components/earn/: earn-view.tsx
components/layout/: app-shell.tsx  conditional-footer.tsx  how-it-works-modal.tsx  top-nav.tsx  vanishing-footer.tsx
components/market/: animated-chance-pct.tsx  date-trading-panel.tsx  market-actions-card.tsx  (+18 more)
contracts/pm-amm-anchor/: Anchor.toml  Cargo.toml  DEPLOY.md  DEPLOY_PROGRAM_ID.txt  package.json  pnpm-lock.yaml
contracts/pm-amm-anchor/programs/pm_amm/: Cargo.toml
contracts/pm-amm-anchor/programs/pm_amm/src/: accrual.rs  errors.rs  lib.rs  lut.rs  pm_math.rs  state.rs
contracts/pm-amm-anchor/programs/pm_amm/src/instructions/: accrue.rs  claim_lp_residuals.rs  claim_winnings.rs  deposit_liquidity.rs  initialize_market.rs  mod.rs  redeem_pair.rs  resolve_market.rs  suggest_l_zero.rs  swap.rs  withdraw_liquidity.rs
contracts/pm-amm-anchor/scripts/: add-usdc-metadata.ts  deploy-devnet.sh  mint-usdc.ts  seed-devnet.ts  seed-markets.ts  update-usdc-metadata.ts
contracts/pm-amm-anchor/tests/: pm_amm.ts
scripts/: backfill-chart-history.ts  backfill-last-known-volume.ts
types/: external-modules.d.ts
(+191 files in other folders)
