[package]
name = "pm_amm"
version = "0.1.0"
description = "Paradigm dynamic pm-AMM on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pm_amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0", features = ["metadata"] }
fixed = "1"
